--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <input type="checkbox" checked="true" onchange="bAging = this.checked">
         <span class="checkmark"></span>
     </label>
+    <div id="delay">⏰ Evolution delay:</div>
+    <div class="slidecontainer">
+        <input type="range" min="10" max="400" value="100" class="slider" id="wait-dur" oninput="timeChange(this.value)">
+      </div>
+      <span id="ms-out">100</span><span>ms</span>
     </div>
     <a href="https://de.wikipedia.org/wiki/Conways_Spiel_des_Lebens" title="What is Conway's Game of Life? 😬">❔</a>
     <canvas id="canvas"  height="600px" width="600px" title="Field of 100 x 100 entitys 😮"></canvas>
