--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <input type="range" min="10" max="400" value="100" class="slider" id="wait-dur" oninput="timeChange(this.value)">
       </div>
       <span id="ms-out">100</span><span>ms</span>
+      <div id="gen-out">
+          <span>👶 Generation: </span>
+          <span id="generation"></span>
+      </div>
     </div>
     <a href="https://de.wikipedia.org/wiki/Conways_Spiel_des_Lebens" title="What is Conway's Game of Life? 😬">❔</a>
     <canvas id="canvas"  height="600px" width="600px" title="Field of 100 x 100 entitys 😮"></canvas>
