--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conway's Game of Life 🤓</title>
+    <link rel="stylesheet" href="styles/mobile.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body >
