--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conway's Game of Life 🤓</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.png">
+    <title>Conway's Game of Life</title>
+    <link rel="shortcut icon" type="image/x-icon" href="icons/favicon.png">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
