--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </span>
            Generation: </span>
         <span id="generation"></span><br>
-        <span><span class="material-icons" style="vertical-align: bottom;">
+        <!-- <span><span class="material-icons" style="vertical-align: bottom;">
           fiber_new
           </span>
           New:
@@ -57,13 +57,13 @@
             </span><br>
             <span>
               <span>5000</span>
-            </span>
+            </span> -->
     </div>
       <div id="drawing-tools">
         <span><span class="material-icons" style="vertical-align: bottom; margin-right: 0.25rem">
           color_lens
           </span> Drawing</span>
-          <span class="expand" onclick="hideDrawing()"><span id="drawing-expand" class="material-icons">
+          <span class="expand" onclick="hideDrawing()" style="margin-left: 7.6rem;"><span id="drawing-expand" class="material-icons">
             expand_less
             </span>
           </span><br>
@@ -87,7 +87,7 @@
         <span><span class="material-icons" style="vertical-align: bottom; margin-right: 0.25rem">
           extension
           </span> Templates</span>
-          <span class="expand" onclick="hideTemplateTools()" style="margin-left: 6.5rem;"><span id="template-tool-expand" class="material-icons">
+          <span class="expand" onclick="hideTemplateTools()" style="margin-left: 6.25rem;"><span id="template-tool-expand" class="material-icons">
             expand_less
             </span>
           </span><br>
@@ -126,7 +126,7 @@
         <span><span class="material-icons" style="vertical-align: bottom; margin-right: 0.25rem">
           settings
           </span> Settings</span>
-          <span class="expand" onclick="hideSettingsTools()" style="margin-left: 7.7rem;"><span id="setting-tool-expand" class="material-icons">
+          <span class="expand" onclick="hideSettingsTools()" style="margin-left: 7.65rem;"><span id="setting-tool-expand" class="material-icons">
             expand_less
             </span>
           </span><br>
@@ -158,6 +158,8 @@
             fullscreen
             </span></a>
     </div>
+  <div class="veil" id="veil"></div>
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
